# tag_creator

./: .dockerignore  .env  .env.example  Dockerfile  README.md  TAG_CREATOR_PROGRESS.md  build_tag_creator_report.py  build_tag_creator_source_strategy_report.py  build_tag_creator_source_strategy_report_blocks.py  docker-compose.example.yml  main.py  pyproject.toml  requirements-ai.txt  requirements.txt
commands/: 00_shared_constraints.txt  01_append_only_csv_store.txt  02_parallel_pipeline.txt  03_streaming_report_writer.txt  04_config_validation.txt  05_atomic_tag_writing.txt  06_open_source_ai_models.txt  07_harden_http_web.txt  08_dry_provider_factory.txt  09_logging_metrics_guardrails.txt  10_packaging_cli_docker_tests.txt
data/: api_cache.csv  enrichment_state.csv  media_inventory.csv
docs/: hybrid_pipeline.md  local_ai_models.md  paid_api_integration_notes.md  server_deployment.md
output/: audit_improved_sample.csv  audit_improved_sample.jsonl  audit_improved_sample_v2.csv  audit_improved_sample_v2.jsonl  audit_improved_sample_v3.csv  audit_improved_sample_v3.jsonl  audit_paid_candidates_sample.csv  audit_paid_candidates_sample_v2.csv  audit_paid_candidates_sample_v3.csv  enrichment_csv_store_sample.jsonl  enrichment_paid_ready_sample.csv  enrichment_paid_ready_sample.jsonl  enrichment_sample.csv  enrichment_sample.jsonl  enrichment_sample_rerun.csv  enrichment_sample_rerun.jsonl  enrichment_sample_safe.csv  existing_tags_32.csv  existing_tags_csv_store_sample.csv  existing_tags_paid_ready_sample.csv  hybrid_free_web_sample_v2.csv  paid_candidates_sample.csv  (+7 more)
(+257 files in other folders)
